navbar styled and responsive

--- a/public/input.css
+++ b/public/input.css
@@ -1,4 +1,4 @@
-/* npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch */
+/* npx tailwindcss -i ./public/input.css -o ./public/output.css --watch */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
